// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should assign a ref 1`] = `null`;

exports[`props should render correctly 1`] = `
{
  "orderedAppliedStyles": [
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_iYirce {background-color: unset;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_iYirce default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with CSS props 1`] = `
{
  "orderedAppliedStyles": [
    ".default_cZxIzA {background-color: var(--colors-primary);}",
    ".default_exNPKM {color: var(--colors-white);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_exNPKM default_cZxIzA default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with a color CSS prop 1`] = `
{
  "orderedAppliedStyles": [
    ".default_grWJqm {background-color: var(--colors-white900);}",
    ".default_gknCVb {color: var(--colors-primary);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_gknCVb default_grWJqm default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with a fontFamily CSS prop 1`] = `
{
  "orderedAppliedStyles": [
    ".default_hJryVf {font-family: var(--fonts-default);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_iYirce {background-color: unset;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_hJryVf default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_iYirce default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with a spacing CSS prop 1`] = `
{
  "orderedAppliedStyles": [
    ".default_bwxhwK {margin-top: var(--space-major-4);}",
    ".default_jxfoXZ {margin-right: var(--space-major-4);}",
    ".default_bsuQWO {margin-bottom: var(--space-major-4);}",
    ".default_faoYoe {margin-left: var(--space-major-4);}",
    ".default_bWySrH {padding-left: var(--space-major-2);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_iYirce {background-color: unset;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_bWySrH default_faoYoe default_bsuQWO default_jxfoXZ default_bwxhwK default_egaguL default_csXDkM default_epixtf default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_iYirce default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with a spacing CSS prop 2`] = `
{
  "orderedAppliedStyles": [
    ".default_dPRgeQ {margin-top: var(--space-xl);}",
    ".default_djJQJv {margin-right: var(--space-xl);}",
    ".default_ewrMhs {margin-bottom: var(--space-xl);}",
    ".default_LBNxo {margin-left: var(--space-xl);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_iYirce {background-color: unset;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_LBNxo default_ewrMhs default_djJQJv default_dPRgeQ default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_iYirce default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with aria* props 1`] = `
{
  "orderedAppliedStyles": [
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_iYirce {background-color: unset;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "aria-label": "hello",
    "className": "bb-Box default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_iYirce default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;

exports[`props should render correctly with the \`css\` prop 1`] = `
{
  "orderedAppliedStyles": [
    ".default_cZxIzA {background-color: var(--colors-primary);}",
    ".default_exNPKM {color: var(--colors-white);}",
    ".default_gIETRq.default_gIETRq.default_gIETRq.default_gIETRq:focus:not(:focus-visible) {outline: none;}",
    ".default_kZbibd {box-sizing: border-box;}",
    ".default_igbtmu {font-size: 100%;}",
    ".default_cuFLHY {font-family: inherit;}",
    ".default_eNGppm {border-left-color: unset;}",
    ".default_bbknPy {border-bottom-color: unset;}",
    ".default_jVJchN {border-right-color: unset;}",
    ".default_lisFbu {border-top-color: unset;}",
    ".default_jzFTvr {padding-left: unset;}",
    ".default_epixtf {padding-bottom: unset;}",
    ".default_csXDkM {padding-right: unset;}",
    ".default_egaguL {padding-top: unset;}",
    ".default_dyBBE {margin-left: unset;}",
    ".default_iJXjnk {margin-bottom: unset;}",
    ".default_gTpzer {margin-right: unset;}",
    ".default_cRZPMY {margin-top: unset;}"
  ],
  "props": {
    "className": "bb-Box default_exNPKM default_cZxIzA default_cRZPMY default_gTpzer default_iJXjnk default_dyBBE default_egaguL default_csXDkM default_epixtf default_jzFTvr default_lisFbu default_jVJchN default_bbknPy default_eNGppm default_cuFLHY default_igbtmu default_kZbibd default_gIETRq scid-YscHY"
  },
  "children": [
    "test"
  ]
}
`;
